--- a/common.gradle
+++ b/common.gradle
@@ -20,6 +20,9 @@ gradle.projectsEvaluated {
 
 repositories {
     mavenCentral()
+    maven { // provides jme3-testdata
+        url 'https://dl.bintray.com/jmonkeyengine/org.jmonkeyengine'
+    }
     maven {
         url "http://nifty-gui.sourceforge.net/nifty-maven-repo"
     }
